@@ -1,3 +1,8 @@
+2003-05-13  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* sak.tcl: added a critcl command to sak to build any critcl
+	tcllib submodules into a tcllibc library (or separate libraries).
+
 2003-05-09  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* comm.man: updated comm to v4.1
